--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -35,13 +35,14 @@
 }
 
 .subtitle {
-  margin: 30px 0 10px 0;
+  margin: 30px 0;
   font-weight: 700;
-  color: var(--textColor);
+  color: var(--lightTextColor);
 }
 
 .text {
   color: var(--textColor);
+  text-align: justify;
   line-height: 1.5;
 }
 
