--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -28,7 +28,30 @@
   box-shadow: var(--image-shadow);
 }
 
+.text{
+  text-align: justify;
+  margin: 30px 0;
+}
+
 
 .subtitle {
   margin: 30px 0;
+}
+
+@media screen and (max-width: 1024px) {
+  .title {
+    font-size: 64px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .title {
+    font-size: 48px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .title {
+    font-size: 36px;
+  }
 }
