--- a/src/components/contact/contactLogo.module.css
+++ b/src/components/contact/contactLogo.module.css
@@ -1,21 +1,26 @@
-.items{
+.items {
   display: flex;
   gap: 30px;
 }
 
 .globe,
-.smart{
+.smart {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.img{
-  box-shadow: var(--image-shadow);
+.imageContainer{
+  padding: 20px;
 }
 
-.contactNumber{
+.img {
+  box-shadow: var(--image-shadow);
+  padding: 10px;
+}
+
+.contactNumber {
   color: gray;
   font-size: 32px;
 }
@@ -35,5 +40,15 @@
 @media screen and (max-width: 640px) {
   .title {
     font-size: 36px;
+  }
+
+  .items {
+    flex-direction: column;
+  }
+
+  .globe,
+  .smart {
+    width: 100%;
+    height: max-content;
   }
 }
