--- a/src/components/featured/featured.module.css
+++ b/src/components/featured/featured.module.css
@@ -38,7 +38,7 @@
 }
 
 .button{
-    padding: 16px 20px;
+    padding: 16px 0;
     border-style: none;
     border-radius: 5px;
     width: max-content;
