--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -52,3 +52,9 @@
     display: none;
   }
 }
+
+@media screen and (max-width:768px) {
+  .container{
+    border: 1px solid var(--textColor);
+  }
+}
