--- a/src/components/cardList/cardList.module.css
+++ b/src/components/cardList/cardList.module.css
@@ -98,3 +98,9 @@ font-size: 16px;
     display: none;
   }
 }
+
+@media screen and (max-width:768px) {
+  .container{
+    border: 1px solid var(--textColor);
+  }
+}
