--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -10,7 +10,6 @@
 
 .contentContainer {
   display: flex;
-  flex-wrap: wrap;
   gap: 50px;
   margin-top: 60px;
 }
@@ -19,19 +18,16 @@
   flex: 5;
   display: flex;
   flex-direction: column;
-  gap: 20px;
-}
-
-.aside{
-  flex: 2;
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
 }
 
 .imageContainer {
   height: 500px;
   position: relative;
+}
+
+.img {
+  object-fit: cover;
+  box-shadow: var(--image-shadow);
 }
 
 .subtitle {
@@ -44,6 +40,10 @@
   color: var(--textColor);
   text-align: justify;
   line-height: 1.5;
+}
+
+.cmobile{
+  display: none;
 }
 
 @media screen and (max-width: 1024px) {
